parser/cool.output
Terminals unused in grammar

    ELSE
    FI
    IF
    IN
    LET
    LOOP
    POOL
    THEN
    WHILE
    CASE
    ESAC
    OF
    DARROW
    NEW
    ISVOID
    STR_CONST
    INT_CONST
    BOOL_CONST
    ASSIGN
    NOT
    LE
    ERROR
    '+'
    '-'
    '*'
    '/'


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error

    7 feature_list: ε
    8             | feature

    9 feature: OBJECTID ':' TYPEID ';'


Terminals, with rules where they appear

    $end (0) 0
    '*' (42)
    '+' (43)
    '-' (45)
    '/' (47)
    ':' (58) 9
    ';' (59) 4 5 9
    '{' (123) 4 5
    '}' (125) 4 5
    error (256) 6
    CLASS (258) 4 5
    ELSE (259)
    FI (260)
    IF (261)
    IN (262)
    INHERITS (263) 5
    LET (264)
    LOOP (265)
    POOL (266)
    THEN (267)
    WHILE (268)
    CASE (269)
    ESAC (270)
    OF (271)
    DARROW (272)
    NEW (273)
    ISVOID (274)
    STR_CONST <symbol> (275)
    INT_CONST <symbol> (276)
    BOOL_CONST <boolean> (277)
    TYPEID <symbol> (278) 4 5 9
    OBJECTID <symbol> (279) 9
    ASSIGN (280)
    NOT (281)
    LE (282)
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    program <program> (38)
        on left: 1
        on right: 0
    class_list <classes> (39)
        on left: 2 3
        on right: 1 3
    class <class_> (40)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (41)
        on left: 7 8
        on right: 4 5
    feature <feature> (42)
        on left: 9
        on right: 8


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error •

    $default  reduce using rule 6 (class)


State 2

    4 class: CLASS • TYPEID '{' feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program • $end

    $end  shift, and go to state 7


State 4

    1 program: class_list •
    3 class_list: class_list • class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


State 5

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 6

    4 class: CLASS TYPEID • '{' feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 7

    0 $accept: program $end •

    $default  accept


State 8

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 9

    5 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


State 10

    4 class: CLASS TYPEID '{' • feature_list '}' ';'

    OBJECTID  shift, and go to state 12

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13
    feature       go to state 14


State 11

    5 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 12

    9 feature: OBJECTID • ':' TYPEID ';'

    ':'  shift, and go to state 16


State 13

    4 class: CLASS TYPEID '{' feature_list • '}' ';'

    '}'  shift, and go to state 17


State 14

    8 feature_list: feature •

    $default  reduce using rule 8 (feature_list)


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    OBJECTID  shift, and go to state 12

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 18
    feature       go to state 14


State 16

    9 feature: OBJECTID ':' • TYPEID ';'

    TYPEID  shift, and go to state 19


State 17

    4 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 20


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'

    '}'  shift, and go to state 21


State 19

    9 feature: OBJECTID ':' TYPEID • ';'

    ';'  shift, and go to state 22


State 20

    4 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 23


State 22

    9 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 9 (feature)


State 23

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 5 (class)
